--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="uk">
 
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Студия</title>
+  <title>Студія</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
@@ -22,9 +22,9 @@
         <a href="./index.html" class="logo">Web<span class="header-logo">Studio</span></a>
 
         <ul class="site-nav list">
-          <li class="nav-items"><a href="./index.html" class="nav-link link current">Студия</a></li>
-          <li class="nav-items"><a href="./portfolio.html" class="nav-link link">Портфолио</a></li>
-          <li class="nav-items"><a href="" class="nav-link link">Контакты</a></li>
+          <li class="nav-items"><a href="./index.html" class="nav-link link current">Студія</a></li>
+          <li class="nav-items"><a href="./portfolio.html" class="nav-link link">Портфоліо</a></li>
+          <li class="nav-items"><a href="" class="nav-link link">Контакти</a></li>
         </ul>
       </nav>
 
@@ -48,8 +48,8 @@
     <!-- Герой сайта -->
     <section class="hero">
       <div class="container">
-        <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-        <button class="hero-btn" type="button" data-modal-open><span class="order">Заказать услугу</span></button>
+        <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
+        <button class="hero-btn" type="button" data-modal-open><span class="order">Замовити послугу</span></button>
         <div class="backdrop is-hidden" data-modal>
           <div class="modal">
             <button class="close-btn" type="button" data-modal-close>
@@ -57,6 +57,48 @@
                 <use href="./images/sprite/sprite.svg#icon-close"></use>
               </svg>
             </button>
+
+            <form class="form">
+              <span class="form-title">Залиште свої дані, ми вам передзвонимо</span>
+
+              <div class="form-block top-title">
+                <label class="form-label" for="name">Ім'я</label>
+                <input class="form-input" type="text" name="name" id="name">
+                <svg class="input-icon" width="18" height="18">
+                  <use href="./images/sprite/sprite.svg#icon-person-black"></use>
+                </svg>
+              </div>
+              <div class="form-block">
+                <label class="form-label" for="tel">Телефон</label>
+                <input class="form-input" type="tel" name="tel" id="tel">
+                <svg class="input-icon" width="18" height="18">
+                  <use href="./images/sprite/sprite.svg#icon-phone-black"></use>
+                </svg>
+              </div>
+              <div class="form-block">
+                <label class="form-label" for="email">Пошта</label>
+                <input class="form-input" type="email" name="email" id="email">
+                <svg class="input-icon" width="18" height="18">
+                  <use href="./images/sprite/sprite.svg#icon-email-black"></use>
+                </svg>
+              </div>
+              <div class="form-block">
+                <label class="comment-label" for="comment">Коментар</label>
+                <textarea class="comment" name="comment" id="comment" rows="9" placeholder="Введіть текст"></textarea>
+              </div>
+              <div class="form-block__chek">
+
+                <label class="policy-label" for="policy">
+                  <input class="form-checkbox" type="checkbox" name="policy" id="policy">
+                  <span class="icon-chek"></span>
+                  <span class="label-text">Погоджуюся з розсилкою та приймаю<a class="policy-link" href="">Умови</span>
+                  договору</a>
+                </label>
+
+              </div>
+              <button class="form-btn" type="submit">Відправити</button>
+            </form>
+
           </div>
         </div>
       </div>
@@ -75,8 +117,8 @@
                 <use href="./images/sprite/sprite.svg#icon-antenna"></use>
               </svg>
             </div>
-            <h3 class="title">Внимание к деталям</h3>
-            <p class="feature-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+            <h3 class="title">УВАГА ДО ДЕТАЛЕЙ</h3>
+            <p class="feature-text">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
           </li>
           <li class="feature-list__items">
             <div class="features-icon__block">
@@ -84,9 +126,8 @@
                 <use href="./images/sprite/sprite.svg#icon-clock"></use>
               </svg>
             </div>
-            <h3 class="title">Пунктуальность</h3>
-            <p class="feature-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
-            </p>
+            <h3 class="title">ПУНКТУАЛЬНІСТЬ</h3>
+            <p class="feature-text">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
           </li>
           <li class="feature-list__items">
             <div class="features-icon__block">
@@ -94,9 +135,8 @@
                 <use href="./images/sprite/sprite.svg#icon-astronaut"></use>
               </svg>
             </div>
-            <h3 class="title">Планирование</h3>
-            <p class="feature-text">Равным образом консультация с широким активом в значительной степени обуславливает.
-            </p>
+            <h3 class="title">ПЛАНУВАННЯ</h3>
+            <p class="feature-text">Так само консультація з широким активом значною мірою зумовлює.</p>
           </li>
           <li class="feature-list__items">
             <div class="features-icon__block">
@@ -104,8 +144,8 @@
                 <use href="./images/sprite/sprite.svg#icon-diagram"></use>
               </svg>
             </div>
-            <h3 class="title">Современные технологии</h3>
-            <p class="feature-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+            <h3 class="title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+            <p class="feature-text">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
           </li>
         </ul>
       </div>
@@ -115,20 +155,20 @@
     <section class="section">
       <div class="container">
         <!-- Примеры работ компании -->
-        <h2 class="work-title">Чем мы занимаемся</h2>
+        <h2 class="work-title">Чим ми займаємося</h2>
 
         <ul class="work-list list">
           <li class="work-list__item">
             <img src="./images/notebook.png" alt="notebook" width="370" />
-            <p class="work-list__text">Десктопные приложения</p>
+            <p class="work-list__text">Десктопні додатки</p>
           </li>
           <li class="work-list__item">
             <img src="./images/tablet.png" alt="tablet" width="370" />
-            <p class="work-list__text">Мобильные приложения</p>
+            <p class="work-list__text">Мобільні додатки</p>
           </li>
           <li class="work-list__item">
             <img src="./images/computer.png" alt="computer" width="370" />
-            <p class="work-list__text">Дизайнерские решения</p>
+            <p class="work-list__text">Дизайнерські рішення</p>
           </li>
         </ul>
       </div>
@@ -142,9 +182,9 @@
 
         <ul class="block-team list">
           <li class="block">
-            <img src="./images/foto1.png" alt="Игорь Демьяненко" width="270" />
+            <img src="./images/foto1.png" alt="Ігор Дем'яненко" width="270" />
             <div class="team-list__block">
-              <h3 class="title-name">Игорь Демьяненко</h3>
+              <h3 class="title-name">Ігор Дем'яненко</h3>
               <p class="section-text">Product Designer</p>
               <ul class="team-list__social">
                 <li class="social-link__item">
@@ -179,9 +219,9 @@
             </div>
           </li>
           <li class="block">
-            <img src="./images/foto2.png" alt="Ольга Репина" width="270" />
+            <img src="./images/foto2.png" alt="Ольга Рєпіна" width="270" />
             <div class="team-list__block">
-              <h3 class="title-name">Ольга Репина</h3>
+              <h3 class="title-name">Ольга Рєпіна</h3>
               <p class="section-text">Frontend Developer</p>
               <ul class="team-list__social">
                 <li class="social-link__item">
@@ -216,9 +256,9 @@
             </div>
           </li>
           <li class="block">
-            <img src="./images/foto3.png" alt="Николай Тарасов" width="270" />
+            <img src="./images/foto3.png" alt="Микола Тарасов" width="270" />
             <div class="team-list__block">
-              <h3 class="title-name">Николай Тарасов</h3>
+              <h3 class="title-name">Микола Тарасов</h3>
               <p class="section-text">Marketing</p>
               <ul class="team-list__social">
                 <li class="social-link__item">
@@ -253,9 +293,9 @@
             </div>
           </li>
           <li class="block">
-            <img src="./images/foto4.png" alt="Михаил Ермаков" width="270" />
+            <img src="./images/foto4.png" alt="Михайло Єрмаков" width="270" />
             <div class="team-list__block">
-              <h3 class="title-name">Михаил Ермаков</h3>
+              <h3 class="title-name">Михайло Єрмаков</h3>
               <p class="section-text">UI Designer</p>
               <ul class="team-list__social">
                 <li class="social-link__item">
@@ -296,7 +336,7 @@
     <!-- Секция постоянные клиенты -->
     <section class="section">
       <div class="container">
-        <h2 class="client-title">Постоянные клиенты </h2>
+        <h2 class="client-title">Постійні клієнти</h2>
         <ul class="client-list list">
           <li class="customer-items">
             <a class="customers-link link" href="">
@@ -354,7 +394,7 @@
           <address class="address">
             <ul class="list">
               <li class="footer-text__items">
-                <p class="footer-text">г. Киев, пр-т Леси Украинки, 26</p>
+                <p class="footer-text">м. Київ, пр-т Лесі Українки, 26</p>
               </li>
               <li class="footer-items"><a href="" class="info">info@example.com</a></li>
               <li class="footer-items"><a href="" class="info">+38 099 111 11 11</a></li>
@@ -362,7 +402,7 @@
           </address>
         </div>
         <div class="social-block">
-          <p class="social-section__text">Присоединяйтесь</p>
+          <p class="social-section__text">приєднуйтесь</p>
           <ul class="footer-list list">
             <li class="footer-list__items">
               <a class="footer-list__link" href="">
