--- a/portfolio.html
+++ b/portfolio.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="uk">
 
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Портфолио</title>
+  <title>Портфоліо</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
@@ -22,9 +22,9 @@
         <a href="./index.html" class="logo">Web<span class="header-logo">Studio</span></a>
 
         <ul class="site-nav list">
-          <li class="nav-items"><a href="./index.html" class="nav-link link">Студия</a></li>
-          <li class="nav-items"><a href="./portfolio.html" class="nav-link link current">Портфолио</a></li>
-          <li class="nav-items"><a href="" class="nav-link link">Контакты</a></li>
+          <li class="nav-items"><a href="./index.html" class="nav-link link">Студія</a></li>
+          <li class="nav-items"><a href="./portfolio.html" class="nav-link link current">Портфоліо</a></li>
+          <li class="nav-items"><a href="" class="nav-link link">Контакти</a></li>
         </ul>
       </nav>
 
@@ -51,9 +51,9 @@
 
         <!-- Кнопки -->
         <ul class="site-button list">
-          <li class="button-items"><button class="button current">Все</button></li>
-          <li class="button-items"><button class="button">Веб-сайты</button></li>
-          <li class="button-items"><button class="button">Приложения</button></li>
+          <li class="button-items"><button class="button current">Усі</button></li>
+          <li class="button-items"><button class="button">Веб-сайти</button></li>
+          <li class="button-items"><button class="button">Додатки</button></li>
           <li class="button-items"><button class="button">Дизайн</button></li>
           <li class="button-items"><button class="button">Маркетинг</button></li>
         </ul>
@@ -64,8 +64,8 @@
                 <img src="./images/portfolio/notebook.jpg" alt="notebook" width="370">
                 <div class="portfolio-overlay">
                   <p class="portfolio-discription__text">
-                    Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит
-                    посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить
+                    відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
                 </div>
               </div>
               <div class="portfolio-border">
@@ -78,8 +78,8 @@
                 <img src="./images/portfolio/basket.jpg" alt="basket" width="370">
                 <div class="portfolio-overlay">
                   <p class="portfolio-discription__text">
-                    Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит
-                    посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить
+                    відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
                 </div>
               </div>
               <div class="portfolio-border">
@@ -92,13 +92,13 @@
                 <img src="./images/portfolio/seafood.jpg" alt="seafood" width="370">
                 <div class="portfolio-overlay">
                   <p class="portfolio-discription__text">
-                    Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит
-                    посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить
+                    відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
                 </div>
               </div>
               <div class="portfolio-border">
                 <h2 class="page-title">Ресторан Seafood</h2>
-                <p class="page-text">Приложение</p>
+                <p class="page-text">Додаток</p>
               </div>
             </a></li>
           <li class="page-block"><a href="" class="link">
@@ -106,12 +106,12 @@
                 <img src="./images/portfolio/headphones.jpg" alt="headphones" width="370">
                 <div class="portfolio-overlay">
                   <p class="portfolio-discription__text">
-                    Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит
-                    посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить
+                    відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
                 </div>
               </div>
               <div class="portfolio-border">
-                <h2 class="page-title">Проект Prime</h2>
+                <h2 class="page-title">Проєкт Prime</h2>
                 <p class="page-text">Маркетинг</p>
               </div>
             </a></li>
@@ -120,13 +120,13 @@
                 <img src="./images/portfolio/boxes.jpg" alt="boxes" width="370">
                 <div class="portfolio-overlay">
                   <p class="portfolio-discription__text">
-                    Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит
-                    посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить
+                    відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
                 </div>
               </div>
               <div class="portfolio-border">
-                <h2 class="page-title">Проект Boxes</h2>
-                <p class="page-text">Приложение</p>
+                <h2 class="page-title">Проєкт Boxes</h2>
+                <p class="page-text">Додаток</p>
               </div>
             </a></li>
           <li class="page-block"><a href="" class="link">
@@ -134,8 +134,8 @@
                 <img src="./images/portfolio/borders.jpg" alt="borders" width="370">
                 <div class="portfolio-overlay">
                   <p class="portfolio-discription__text">
-                    Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит
-                    посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить
+                    відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
                 </div>
               </div>
               <div class="portfolio-border">
@@ -148,12 +148,12 @@
                 <img src="./images/portfolio/edition.jpg" alt="edition" width="370">
                 <div class="portfolio-overlay">
                   <p class="portfolio-discription__text">
-                    Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит
-                    посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить
+                    відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
                 </div>
               </div>
               <div class="portfolio-border">
-                <h2 class="page-title">Издание Limited Edition</h2>
+                <h2 class="page-title">Видання Limited Edition</h2>
                 <p class="page-text">Дизайн</p>
               </div>
             </a></li>
@@ -162,12 +162,12 @@
                 <img src="./images/portfolio/lab.jpg" alt="lab" width="370">
                 <div class="portfolio-overlay">
                   <p class="portfolio-discription__text">
-                    Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит
-                    посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить
+                    відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
                 </div>
               </div>
               <div class="portfolio-border">
-                <h2 class="page-title">Проект LAb</h2>
+                <h2 class="page-title">Проєкт LAB</h2>
                 <p class="page-text">Маркетинг</p>
               </div>
             </a></li>
@@ -176,13 +176,13 @@
                 <img src="./images/portfolio/business.jpg" alt="business" width="370">
                 <div class="portfolio-overlay">
                   <p class="portfolio-discription__text">
-                    Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит
-                    посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить
+                    відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
                 </div>
               </div>
               <div class="portfolio-border">
                 <h2 class="page-title">Growing Business</h2>
-                <p class="page-text">Приложение</p>
+                <p class="page-text">Додаток</p>
               </div>
             </a></li>
         </ul>
@@ -199,7 +199,7 @@
           <address class="address">
             <ul class="list">
               <li class="footer-text__items">
-                <p class="footer-text">г. Киев, пр-т Леси Украинки, 26</p>
+                <p class="footer-text">м. Київ, пр-т Лесі Українки, 26</p>
               </li>
               <li class="footer-items"><a href="" class="info">info@example.com</a></li>
               <li class="footer-items"><a href="" class="info">+38 099 111 11 11</a></li>
@@ -207,11 +207,11 @@
           </address>
         </div>
         <div class="social-block">
-          <p class="social-section__text">Присоединяйтесь</p>
+          <p class="social-section__text">приєднуйтесь</p>
           <ul class="footer-list list">
             <li class="footer-list__items">
               <a class="footer-list__link" href="">
-                <svg class="footer-list__icons" width="20" height="20">
+                <svg class="footer-list__icons" width="20" height="20" stroke="#212121" fill="#212121">
                   <use href="./images/sprite/sprite.svg#icon-instagram"></use>
                 </svg>
               </a>
