--- a/index.html
+++ b/index.html
@@ -159,15 +159,15 @@
 
         <ul class="work-list list">
           <li class="work-list__item">
-            <img src="./images/notebook.png" alt="notebook" width="370" />
+            <img src="./images/notebook.jpg" alt="notebook" width="370" />
             <p class="work-list__text">Десктопні додатки</p>
           </li>
           <li class="work-list__item">
-            <img src="./images/tablet.png" alt="tablet" width="370" />
+            <img src="./images/tablet.jpg" alt="tablet" width="370" />
             <p class="work-list__text">Мобільні додатки</p>
           </li>
           <li class="work-list__item">
-            <img src="./images/computer.png" alt="computer" width="370" />
+            <img src="./images/computer.jpg" alt="computer" width="370" />
             <p class="work-list__text">Дизайнерські рішення</p>
           </li>
         </ul>
@@ -182,7 +182,7 @@
 
         <ul class="block-team list">
           <li class="block">
-            <img src="./images/foto1.png" alt="Ігор Дем'яненко" width="270" />
+            <img src="./images/foto1.jpg" alt="Ігор Дем'яненко" width="270" />
             <div class="team-list__block">
               <h3 class="title-name">Ігор Дем'яненко</h3>
               <p class="section-text">Product Designer</p>
@@ -219,7 +219,7 @@
             </div>
           </li>
           <li class="block">
-            <img src="./images/foto2.png" alt="Ольга Рєпіна" width="270" />
+            <img src="./images/foto2.jpg" alt="Ольга Рєпіна" width="270" />
             <div class="team-list__block">
               <h3 class="title-name">Ольга Рєпіна</h3>
               <p class="section-text">Frontend Developer</p>
@@ -256,7 +256,7 @@
             </div>
           </li>
           <li class="block">
-            <img src="./images/foto3.png" alt="Микола Тарасов" width="270" />
+            <img src="./images/foto3.jpg" alt="Микола Тарасов" width="270" />
             <div class="team-list__block">
               <h3 class="title-name">Микола Тарасов</h3>
               <p class="section-text">Marketing</p>
@@ -293,7 +293,7 @@
             </div>
           </li>
           <li class="block">
-            <img src="./images/foto4.png" alt="Михайло Єрмаков" width="270" />
+            <img src="./images/foto4.jpg" alt="Михайло Єрмаков" width="270" />
             <div class="team-list__block">
               <h3 class="title-name">Михайло Єрмаков</h3>
               <p class="section-text">UI Designer</p>
