--- a/index.html
+++ b/index.html
@@ -64,21 +64,21 @@
               <div class="form-block top-title">
                 <label class="form-label" for="name">Ім'я</label>
                 <input class="form-input" type="text" name="name" id="name">
-                <svg class="input-icon" width="18" height="18">
+                <svg class="input-icon">
                   <use href="./images/sprite/sprite.svg#icon-person-black"></use>
                 </svg>
               </div>
               <div class="form-block">
                 <label class="form-label" for="tel">Телефон</label>
                 <input class="form-input" type="tel" name="tel" id="tel">
-                <svg class="input-icon" width="18" height="18">
+                <svg class="input-icon">
                   <use href="./images/sprite/sprite.svg#icon-phone-black"></use>
                 </svg>
               </div>
               <div class="form-block">
                 <label class="form-label" for="email">Пошта</label>
                 <input class="form-input" type="email" name="email" id="email">
-                <svg class="input-icon" width="18" height="18">
+                <svg class="input-icon">
                   <use href="./images/sprite/sprite.svg#icon-email-black"></use>
                 </svg>
               </div>
@@ -437,6 +437,14 @@
             </li>
           </ul>
         </div>
+        <form class="footer-submit">
+          <p class="footer-submit__text">Підпишіться на розсилку</p>
+          <div class="footer-submit__form">
+            <label class="footer-submit__label" for="submit-mail"></label>
+            <input class="footer-submit__input" type="email" name="submit-mail" id="submit-mail" placeholder="E-mail">
+            <button class="footer-submit__btn" type="submit">Підписатися</button>
+          </div>
+        </form>
       </section>
     </div>
   </footer>
