--- a/portfolio.html
+++ b/portfolio.html
@@ -211,7 +211,7 @@
           <ul class="footer-list list">
             <li class="footer-list__items">
               <a class="footer-list__link" href="">
-                <svg class="footer-list__icons" width="20" height="20" stroke="#212121" fill="#212121">
+                <svg class="footer-list__icons" width="20" height="20">
                   <use href="./images/sprite/sprite.svg#icon-instagram"></use>
                 </svg>
               </a>
@@ -242,6 +242,14 @@
             </li>
           </ul>
         </div>
+        <form class="footer-submit">
+          <p class="footer-submit__text">Підпишіться на розсилку</p>
+          <div class="footer-submit__form">
+            <label class="footer-submit__label" for="submit-mail"></label>
+            <input class="footer-submit__input" type="email" name="submit-mail" id="submit-mail" placeholder="E-mail">
+            <button class="footer-submit__btn" type="submit">Підписатися</button>
+          </div>
+        </form>
       </section>
     </div>
   </footer>
